raw data for both sensors now published on ros. Need to create empty SoftAS5600 then initialise it in setup. Need to call spinOnce regularly or else rosserial cant connect.

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,4 +13,4 @@ platform = atmelavr
 board = nanoatmega328
 framework = arduino
 lib_deps = testato/SoftwareWire@^1.6.0
-monitor_speed = 2000000
+monitor_speed = 57600
